<resources>
    <string name="app_name">Biro Properties</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="plot_seller">Plot Seller</string>
    <string name="plot_location">Plot Location</string>
    <string name="todo">ToDo</string>
    <string name="view_more_details">View More Details</string>
    <string name="plot_price">Plot Price</string>
    <string name="plot_size">Plot Size</string>
    <string name="title_activity_maps">Add Plot on Map</string>
    <string name="title_activity_display_map">Display Plot on Map</string>
    <string name="title_activity_manage_locations">ManageLocationsActivity</string>
    <string name="add_new_plot">Add New Plot</string>
    <string name="plot_title">Plot Title</string>
    <string name="todo1">TODO</string>
    <string name="plot_posted_on">Plot Posted On</string>
    <string name="choose_country">Choose County</string>
    <string name="location_name">Location Name</string>
    <string name="search_by_price">Search by Price</string>
    <string name="manage_plot_details">Manage Plot Details</string>
    <string name="view_plot_details">View Plot Details</string>
    <string name="edit_plot_details">Edit Plot Details...</string>
    <string name="delete_plot">Delete Plot</string>
    <string name="manage_plot_photos">Manage Plot Photos</string>
    <string name="manage_plot_video">Manage Plot Video</string>
    <string name="feature_plot">Feature Plot</string>
    <string name="publish_unpublish_plot">Publish/Unpublish Plot</string>
    <string name="enter_plot_title">Enter Plot Title</string>
    <string name="enter_plot_size">Enter Plot Size</string>
    <string name="enter_plot_price">Enter Plot Price</string>
    <string name="plot_description">Plot Description</string>
    <string name="add_image_to_the_plot">Add Image to the Plot</string>
    <string name="next">Next</string>
    <string name="add_photos_to_plot">Add Photos to Plot</string>
    <string name="remove_photos_from_plot">Remove Photos from Plot</string>
    <string name="manage_plot_pictures">Manage Plot Pictures</string>
    <string name="posted_on">posted on</string>
    <string name="call_plot_seller">Call Plot Seller</string>
    <string name="request_call_back">Request Call Back</string>
</resources>
