<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ngobiro.biroproperties.activities.AddNewPlotActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorGreen"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">


        <EditText
            android:id="@+id/plot_title_EditView"
            android:background="@color/white"
            android:layout_margin="8dp"
            android:inputType="text"
            android:textAlignment="textStart"
            android:gravity="start"
            android:hint="@string/enter_plot_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />


        <EditText
            android:id="@+id/plot_size_EditView"
            android:background="@color/white"
            android:layout_margin="8dp"
            android:inputType="text"
            android:textAlignment="textStart"
            android:gravity="start"
            android:hint="@string/enter_plot_size"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <EditText
            android:id="@+id/plot_price_EditView"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:inputType="number"
            android:textAlignment="textStart"
            android:gravity="start"
            android:hint="@string/enter_plot_price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />
        <EditText
            android:id="@+id/plot_description_EditView"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:gravity="start"
            android:hint="@string/plot_description"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            />
        <Button
            android:id="@+id/add_new_plot_next"
            android:background="@color/white"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:onClick="add_new_plot_next"
            android:text="@string/next" />


    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>