<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ngobiro.biroproperties.activities.PlotDetailsActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPlotBackgrounds"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="-5dp">


            <TextView
                android:id="@+id/plot_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGreen"
                android:hint="@string/plot_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/plot_price_txtView"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/plot_price"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_size_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:text="@string/plot_size"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/posted_on_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGreen"
                android:hint="@string/posted_on"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/plot_description"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:scrollbarThumbHorizontal="@color/colorAccent" >

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/make_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:text="@string/call_plot_seller"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/request_callback_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorGreen"
                android:text="@string/request_call_back"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
