<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightpink"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayout">

    <android.support.v7.widget.CardView

        app:cardBackgroundColor="@color/cardview_light_background"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/cardView">


        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_margin="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPlotBackgrounds"
            android:layout_weight="1" >


            <TextView
                android:id="@+id/plot_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:gravity="start"
                android:layout_margin="8dp"
                android:hint="@string/plot_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/plot_location" />

            <TextView
                android:id="@+id/plot_location"
                android:layout_width="151dp"
                android:layout_height="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:hint="@string/plot_location"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/plot_picture"
                app:layout_constraintTop_toBottomOf="@+id/plot_title" />

            <TextView
                android:id="@+id/plot_size"
                android:layout_width="150dp"
                android:layout_height="19dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/colorLightGreen"
                android:hint="@string/plot_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/plot_picture"
                app:layout_constraintTop_toBottomOf="@+id/plot_location" />

            <TextView
                android:id="@+id/plot_price"
                android:layout_margin="8dp"
                android:layout_width="152dp"
                android:layout_height="23dp"
                android:layout_weight="1"
                android:background="@color/colorLightGreen"
                android:hint="@string/plot_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot_size"
                app:layout_constraintStart_toEndOf="@+id/plot_picture"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0" />

            <ImageView
                android:id="@+id/plot_picture"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorWhite"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/plot_title" android:contentDescription="@string/todo1"
                app:layout_constraintVertical_bias="0.0"
                android:layout_width="100dp" />

            <TextView
                android:id="@+id/plot_posting_date_textView"
                android:layout_width="154dp"
                android:layout_margin="8dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/plot_posted_on"
                android:background="@color/colorLightGreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/plot_picture"
                app:layout_constraintTop_toBottomOf="@+id/plot_price"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/view_more_textView"
                android:layout_margin="8dp"
                android:layout_width="153dp"
                android:layout_height="21dp"
                android:background="@color/colorPrimary"
                android:text="@string/view_more_details"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/plot_picture"
                app:layout_constraintTop_toBottomOf="@+id/plot_posting_date_textView"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="1.0" />



        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>